--- a/base-gateway/pom.xml
+++ b/base-gateway/pom.xml
@@ -23,11 +23,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
 		</dependency>
-		<!--动态路由组件-->
-		<dependency>
-			<groupId>com.joolun</groupId>
-			<artifactId>base-common-gateway</artifactId>
-		</dependency>
 		<!--注册中心客户端-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -69,6 +64,11 @@
 			<groupId>com.github.xiaoymin</groupId>
 			<artifactId>swagger-bootstrap-ui</artifactId>
 			<version>${swagger-bootstrap-ui.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
 		</dependency>
 	</dependencies>
 
