--- a/base-common/base-common-swagger/pom.xml
+++ b/base-common/base-common-swagger/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${swagger.fox.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>swagger-bootstrap-ui</artifactId>
+			<version>${swagger-bootstrap-ui.version}</version>
+		</dependency>
 	</dependencies>
 </project>
