--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
-				<artifactId>base-common-bom</artifactId>
+				<artifactId>base-common-parent</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
