--- a/base-auth/pom.xml
+++ b/base-auth/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>com.joolun</groupId>
 		<artifactId>joolun</artifactId>
-		<version>2.6.0</version>
+		<version>2.1.6</version>
 	</parent>
 
 	<artifactId>base-auth</artifactId>
 	<packaging>jar</packaging>
 
-	<description>认证授权中心，基于 spring security oAuth2</description>
+	<description>认证授权中心</description>
 
 	<dependencies>
 		<!--注册中心客户端-->
