--- a/base-codegen/pom.xml
+++ b/base-codegen/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.joolun</groupId>
 		<artifactId>joolun</artifactId>
-		<version>2.6.0</version>
+		<version>2.1.6</version>
 	</parent>
 
 	<artifactId>base-codegen</artifactId>
@@ -58,11 +58,10 @@
 			<groupId>com.joolun</groupId>
 			<artifactId>base-common-log</artifactId>
 		</dependency>
-		<!--代码生成模板引擎-->
+		<!--代码生成引擎-->
 		<dependency>
 			<artifactId>velocity</artifactId>
 			<groupId>org.apache.velocity</groupId>
-			<version>${velocity.version}</version>
 		</dependency>
 		<!--web 模块-->
 		<dependency>
