--- a/base-gateway/pom.xml
+++ b/base-gateway/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>com.joolun</groupId>
 		<artifactId>joolun</artifactId>
-		<version>2.6.0</version>
+		<version>2.1.6</version>
 	</parent>
 
 	<artifactId>base-gateway</artifactId>
 	<packaging>jar</packaging>
 
-	<description>服务网关，基于 spring cloud gateway</description>
+	<description>服务网关</description>
 
 	<dependencies>
 		<!--gateway 网关依赖,内置webflux 依赖-->
@@ -37,9 +37,7 @@
 		<dependency>
 			<groupId>com.github.axet</groupId>
 			<artifactId>kaptcha</artifactId>
-			<version>${kaptcha.version}</version>
 		</dependency>
-		<!--hutool-->
 		<dependency>
 			<groupId>com.joolun</groupId>
 			<artifactId>base-common-core</artifactId>
@@ -53,17 +51,14 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${swagger.fox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>${swagger.fox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
 			<artifactId>swagger-bootstrap-ui</artifactId>
-			<version>${swagger-bootstrap-ui.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
 		<dependency>
