--- a/joolun/base-nacos/src/main/resources/bootstrap.yml
+++ b/joolun/base-nacos/src/main/resources/bootstrap.yml
@@ -14,7 +14,7 @@ db:
   user: root
   password: root
   url:
-    0: jdbc:mysql://${MYSQL-HOST:base-mysql}:${MYSQL-PORT:3306}/${MYSQL-DB:base_config}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true
+    0: jdbc:mysql://${MYSQL-HOST:base-mysql}:${MYSQL-PORT:3306}/${MYSQL-DB:base_config}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
 
 spring:
   datasource:
