--- a/joolun/server/seata-server/conf/registry.conf
+++ b/joolun/server/seata-server/conf/registry.conf
@@ -11,10 +11,9 @@ registry {
 
 config {
   # file、nacos 、apollo、zk、consul、etcd3
-  type = "nacos"
+  type = "file"
 
-  nacos {
-    serverAddr = "base-nacos"
-    namespace = "public"
+  file {
+    name = "file.conf"
   }
 }
