--- a/joolun/server/seata-server/conf/file.conf
+++ b/joolun/server/seata-server/conf/file.conf
@@ -1,7 +1,7 @@
 service {
   #transaction service group mapping
-  vgroup_mapping.base-weixin-admin-group = "default"
-  vgroup_mapping.base-mall-admin-group = "default"
+  vgroup_mapping.base-mall-admin-fescar-service-group = "default"
+  vgroup_mapping.base-weixin-admin-fescar-service-group = "default"
   #only support when registry.type=file, please don't set multiple addresses
   default.grouplist = "127.0.0.1:8091"
   #disable seata
