--- a/joolun/base-common/base-common-transaction/pom.xml
+++ b/joolun/base-common/base-common-transaction/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>com.joolun</groupId>
 		<artifactId>base-common</artifactId>
-		<version>2.8.3</version>
+		<version>2.8.4</version>
 	</parent>
 
 	<artifactId>base-common-transaction</artifactId>
 	<packaging>jar</packaging>
 
-	<description>seata分布式事务</description>
+	<description>分布式事务</description>
 
 
 	<dependencies>
