--- a/joolun/pom.xml
+++ b/joolun/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.joolun</groupId>
 	<artifactId>joolun</artifactId>
-	<version>2.8.3</version>
+	<version>2.8.4</version>
 	<name>${project.artifactId}</name>
 	<packaging>pom</packaging>
 	<organization>
@@ -18,17 +18,17 @@
 		<copy>true</copy>
 		<localDir>C:/joolun-jar</localDir>
 		<!--打包配置-->
-		<spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-		<spring-boot-admin.version>2.2.2</spring-boot-admin.version>
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+		<spring-boot.version>2.3.0.RELEASE</spring-boot.version>
+		<spring-boot-admin.version>2.2.3</spring-boot-admin.version>
+		<spring-cloud.version>Hoxton.SR4</spring-cloud.version>
 		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
 		<mybatis-plus.version>3.3.1</mybatis-plus.version>
 		<dynamic-datasource.version>3.0.0</dynamic-datasource.version>
 		<druid.version>1.1.22</druid.version>
 		<security.oauth.version>2.3.6.RELEASE</security.oauth.version>
-		<hutool.version>5.3.1</hutool.version>
+		<hutool.version>5.3.5</hutool.version>
 		<ttl.version>2.11.4</ttl.version>
-		<weixin-java.version>3.7.7.B</weixin-java.version>
+		<weixin-java.version>3.8.0</weixin-java.version>
 		<spring-platform.version>Cairo-SR8</spring-platform.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -189,11 +189,6 @@
 			<dependency>
 				<groupId>com.joolun</groupId>
 				<artifactId>base-upms-common</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.joolun</groupId>
-				<artifactId>base-weixin-admin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
