2020/9/17 1.极兔速递添加 2.用户下单成功提醒 3.邀新成功人数显示 4.订单拆分原先根据发货地，现在改为商铺+发货地 5.定时任务更新分享任务 6.任务表新增tips字段

--- a/joolun/base-mall/base-mall-admin/pom.xml
+++ b/joolun/base-mall/base-mall-admin/pom.xml
@@ -84,6 +84,10 @@
             <groupId>com.joolun</groupId>
             <artifactId>base-common-storage</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.joolun</groupId>
+            <artifactId>base-common-sms</artifactId>
+        </dependency>
         <!--分布式事务
         <dependency>
             <groupId>com.joolun</groupId>
