（刘艳龙 提交）

--- a/joolun/server/nacos-server/conf/application.properties
+++ b/joolun/server/nacos-server/conf/application.properties
@@ -18,9 +18,9 @@ spring.datasource.platform=mysql
 
 ### Connect URL of DB:
 db.num=1
-db.url.0=jdbc:mysql://base-mysql:3306/base_config?serverTimezone=GMT%2B8&characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
+db.url.0=jdbc:mysql://localhost:3306/base_config?serverTimezone=GMT%2B8&characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
 db.user=root
-db.password=root
+db.password=1234
 
 
 #*************** Naming Module Related Configurations ***************#
