--- a/joolun/base-upms/base-upms-admin/pom.xml
+++ b/joolun/base-upms/base-upms-admin/pom.xml
@@ -87,6 +87,16 @@
 			<groupId>com.joolun</groupId>
 			<artifactId>base-common-sms</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.joolun</groupId>
+			<artifactId>base-mall-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.joolun</groupId>
+			<artifactId>base-mall-admin</artifactId>
+			<version>2.8.4</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
